# torch-fem

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  OPERATOR_SUMMARY.md  README.md  mkdocs.yml  package-lock.json  pyproject.toml
docs/: TODO_option3_stepfunctional_vmap.md  api.md  getting_started.md  index.md  license.md
docs/adr/: 0002-hidden-state-snapshot-for-jacobian-consistency.md  0003-energy-head-for-symmetric-tangent.md  0004-eigenvalue-projection-tangent.md  0005-modified-newton-elastic-tangent.md  0006-surrogate-nr-convergence-remedies-summary.md
examples/basic/planar/: finite_strain.ipynb  large_stretch.ipynb  minimal.ipynb
examples/basic/solid/: cubes.ipynb  finite_strain.ipynb  gyroid.ipynb  implicits.ipynb  inelasticity.ipynb  large_stretch.ipynb  material_rotation.ipynb  plasticity.ipynb  tpms.ipynb  (+2 more)
examples/benchmark/: cubes.ipynb  cubes.py
src/torchfem/: base.py  base_after_step.py  base_before_step.py  elements.py  homogenization.py  io.py  materials.py  mesh.py  nonlinear_solvers.py  operators.py  planar.py  rotations.py  sdfs.py  shell.py  solid.py  sparse.py  surrogate_integrate_material_parallel.py  truss.py  utils.py
tests/: test_elements.py  test_materials.py  test_modified_newton.py  test_nonlinear_solvers.py  test_notebooks.py  test_plasticity_umat.py  test_rotations.py  test_spd_projection.py
user_scripts/: _ideas_material_patch_meshing.txt  check_lzy.py  compute_reference_stiffness.py  plot_convergence_and_epbar.py  plot_newton_iters_inc1.py  profile_nonlinear_solvers.py  profile_nonlinear_solvers_orders.csv  profile_nonlinear_solvers_results.csv  profile_nonlinear_solvers_surrogate.py  profile_nonlinear_solvers_surrogate_orders.csv  profile_nonlinear_solvers_surrogate_results.csv  run_simulation.py  run_simulation_parallel.py  run_simulation_surrogate.py  surrogate_stiffness_eigenvalues.ipynb
user_scripts/diagnostics/: test_analytic_K.py  test_indistribution_replay.py
user_scripts/exampes/: run_example_l_shaped.py  run_surrogate_examples.py
user_scripts/examples/: plot_epbar_field.py  run_surrogate_examples.py
user_scripts/laplace/: laplace_2d.py
user_scripts/msc_local_surrogate/: run_compression_test.py
user_scripts/periodic_bc/: PERIODIC_BC_IMPLEMENTATION.md  mpc_periodic_2d.py  mpc_periodic_3d.py
user_scripts/stiffness_analysis/: analyse_stiffness.py  analysis_plan.md  benchmark_rbm_forces.py  compute_full_element_stiffness.py  compute_highorder_boundary_element_stiffness.py  compute_reference_stiffness.py  patch_rbm_flag.py  plot_eigenmodes.py  surrogate_stiffness_eigenvalues.ipynb
user_scripts/time_analysis/: jacobian_benchmark.py  jacobian_benchmark_results.csv  plot_jacobian_scaling.py  plot_scaling.py  run_timing.py  timing_results.csv
user_scripts/utils/: boundary_conditons.py  mechanical_quantities.py  plotting.py
(+391 files in other folders)
